# propd

./: .gitignore  CMakeLists.sysprop.txt  CMakeLists.txt  log.h  main.cpp  persistent_properties.cpp  persistent_properties.h  property_service.cpp  property_service.h  signal_handler.cpp  util.cpp  util.h
libcutils/include/cutils/: sockets.h
toolbox/: tools.h
upstream-bionic/libc/bionic/: system_properties.cpp
upstream-bionic/libc/include/: stringx.h
upstream-bionic/libc/include/sys/: _system_properties.h
upstream-bionic/libc/private/: bionic_cdefs.h  bionic_futex.h
